...

    <TextView
        android:id="@+id/prevNoteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/noteView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:text=""
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/gridButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...

        <Button
            android:id="@+id/le"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/ze"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/xe"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/me"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/li"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/mi"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/lu"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/mu"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/ny"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/my"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/nai"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/cai"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/mai"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/cau"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

        <Button
            android:id="@+id/mau"
            android:layout_width="@dimen/grid_side_length"
            android:layout_height="@dimen/grid_side_length"
...

    <LinearLayout
        android:id="@+id/optionButtonBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/outerPieceQueue"
        app:layout_constraintTop_toBottomOf="@+id/gridButtons">

...

        <Spinner
            android:id="@+id/judgeSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/innerPieceQueue"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
...

            <ImageView
                android:id="@+id/kauk"
                android:layout_width="@dimen/piece_image_side_length"
                android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/gua"
                android:layout_width="@dimen/piece_image_side_length"
                android:layout_height="wrap_content"
...
