<resources>
    <string name="app_name">Cerke Noter</string>

    <string-array name="judge_number">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="color_name">
        <item></item>
        <item>black</item>
        <item>red</item>
    </string-array>

    <string-array name="declaration_name">
        <item></item>
        <item>=tymor</item>
        <item>=taxt</item>
    </string-array>

    <string-array name="season_name">
        <item></item>
        <item>spring</item>
        <item>summer</item>
        <item>autumn</item>
        <item>winter</item>
    </string-array>

    <string name="button_text_enter">Enter</string>
    <string name="button_text_over">Over</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_output">Output</string>
    <string name="button_text_to_next_season">To next Season</string>

    <string name="editText_hands">Final hands?</string>
    <string name="editText_black_name">Black player\'s name?</string>
    <string name="editText_red_name">Red player\'s name?</string>

    <string name="ok">OK</string>
    <string name="ng">Cancel</string>
</resources>
